--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -165,7 +165,7 @@
 
             <!--Main-->
             <ImageView
-                android:id="@+id/MainDish"
+                android:id="@+id/mainDish"
                 style="@style/my_Style"
                 android:layout_marginStart="17dp"
                 android:layout_toEndOf="@+id/salad"
@@ -176,9 +176,9 @@
                 android:id="@+id/textView7"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/MainDish"
-                android:layout_alignStart="@+id/MainDish"
-                android:layout_alignEnd="@id/MainDish"
+                android:layout_below="@+id/mainDish"
+                android:layout_alignStart="@+id/mainDish"
+                android:layout_alignEnd="@id/mainDish"
                 android:layout_marginStart="17dp"
                 android:layout_marginTop="3dp"
                 android:layout_marginEnd="19dp"
@@ -191,10 +191,10 @@
 
             <!--Drinks-->
             <ImageView
-                android:id="@+id/Drinks"
+                android:id="@+id/drinks"
                 style="@style/my_Style"
                 android:layout_marginStart="17dp"
-                android:layout_toEndOf="@+id/MainDish"
+                android:layout_toEndOf="@+id/mainDish"
                 android:background="@drawable/category_card_bc"
                 android:src="@drawable/category_drinks" />
 
@@ -202,9 +202,9 @@
                 android:id="@+id/TextView8"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/Drinks"
-                android:layout_alignStart="@+id/Drinks"
-                android:layout_alignEnd="@id/Drinks"
+                android:layout_below="@+id/drinks"
+                android:layout_alignStart="@+id/drinks"
+                android:layout_alignEnd="@id/drinks"
                 android:layout_marginStart="17dp"
                 android:layout_marginTop="3dp"
                 android:layout_marginEnd="19dp"
@@ -217,10 +217,10 @@
 
             <!--Dessert-->
             <ImageView
-                android:id="@+id/Dessert"
+                android:id="@+id/dessert"
                 style="@style/my_Style"
                 android:layout_marginStart="17dp"
-                android:layout_toEndOf="@+id/Drinks"
+                android:layout_toEndOf="@+id/drinks"
                 android:background="@drawable/category_card_bc"
                 android:src="@drawable/category_dessert" />
 
@@ -228,9 +228,9 @@
                 android:id="@+id/TextView9"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/Dessert"
-                android:layout_alignStart="@+id/Dessert"
-                android:layout_alignEnd="@id/Dessert"
+                android:layout_below="@+id/dessert"
+                android:layout_alignStart="@+id/dessert"
+                android:layout_alignEnd="@id/dessert"
                 android:layout_marginStart="17dp"
                 android:layout_marginTop="3dp"
                 android:layout_marginEnd="19dp"
