--- a/app/src/main/res/layout/activity_category.xml
+++ b/app/src/main/res/layout/activity_category.xml
@@ -38,6 +38,7 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_category"
+        tools:listitem="@layout/category_rv"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_marginTop="8dp"
