--- a/app/src/main/res/layout/category_rv.xml
+++ b/app/src/main/res/layout/category_rv.xml
@@ -61,16 +61,16 @@
         app:layout_constraintTop_toBottomOf="@+id/tittle" />
 
     <ImageView
-        android:id="@+id/imageView6"
+        android:id="@+id/next"
         android:layout_width="60dp"
         android:layout_height="60dp"
-        android:layout_marginEnd="5dp"
+        android:layout_marginEnd="16dp"
         android:padding="5dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/card_btn"
-        app:tint="#019267" />
+        app:tint="@color/black"
+        app:srcCompat="@drawable/card_btn" />
 
     <ImageView
         android:id="@+id/imageView5"
@@ -80,6 +80,8 @@
         android:layout_margin="10dp"
         app:layout_constraintStart_toEndOf="@+id/cardView2"
         app:layout_constraintTop_toBottomOf="@+id/tittle"
-        app:srcCompat="@drawable/clock_icon" />
+        app:srcCompat="@drawable/clock_icon"
+        app:tint="@color/black"
+        />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
